# studies

./: .gitignore  README.md
HLA/kol1/: test1.hla
HLA/lab2/: lab2.3.hla  lab2.hla
HLA/lab3/: lab3..2.hla  lab3.1.1.hla  lab3.1.2.hla  lab3.1.2.link  lab3.3.hla  lab3.nwmcoxd.hla
III_semestr/AAN/AAN_chart_app/AAN_chart_app/: CMakeLists.txt  Main.qml  copyPaste  lsm.cpp  lsm.h  main.cpp
III_semestr/AAN/metodaNajmniejszychKwadrartow/metodaNajmniejszychKwadratow/: CMakeLists.txt
III_semestr/AKiPN(hla)/: hello_world.hla
III_semestr/AKiPN(hla)/lab1/: zad2.hla  (+1 more)
III_semestr/programowanie_obiektowe(java)/: SimpleCalculator.java
II_semestr/F(lab)/: E3.2-sprawozdanie.docx  MC 9.1.-sprawozdanie.docx  MC4.2-sprawozdanie.docx
II_semestr/PO(cpp)/zaj6/zaj6/: CMakeLists.txt  afigura.cpp  afigura.h  figura.cpp  instrument.cpp  kolo.cpp  kwadrat.cpp  kwadrat.h  kwadrat2.cpp  prostokat.cpp  prostokat.h  prostokat2.h  trumpet.h  violin.cpp  violin.h
II_semestr/fizyka_lab/: E3.2-protokół_pomiarowy.docx  E5.1-protokół_pomiarowy.docx  MC 9.1.-protokół_pomiarowy.docx  O3.2-sprawozdanie.docx  obliczenia.xlsx  wzór-sprawozdanie.docx
II_semestr/programowanie_obiektowe(cpp)/zaj4/zaj4_kod/: CMakeLists.txt  data.h
IV_semestr/BI/: lab2_sprawozdanie.docx  lab3_sprawozdanie.docx
IV_semestr/BI(lab)/: lab2_sprawozdanie.docx  lab3_sprawozdanie.docx  lab4_sprawozdanie.docx  lab5_sprawozdanie.docx  lab6_sprawozdanie.docx  lab7_sprawozdanie.docx  lab8_sprawozdanie.docx
IV_semestr/IO/: sushi_IO.bpmn  sushi_IO_seller_v1.bpmn  xml.xml  xml.xsd
IV_semestr/IO(lab)/: diagram_1.bpmn  sushi_IO.bpmn  sushi_IOv2.bpmn
IV_semestr/PP/: elozelo.hi
IV_semestr/TC(lab)/: lab1_prot.docx  lab1_tabele.xlsx  lab2_prot.docx  lab3_prot.docx
Java/: class HelloWorld.java
Java/lab1/: pom.xml
VI_semestr/PAM(Android)/: .gitignore
V_semestr/: kol2.cpp
V_semestr/PSI/: lab1.py  main.py
V_semestr/SWIFT/: kol1.swift  kol2.swift  lab11.swift  lab5.swift  lab8.swift  lab9.swift
Wstęp_do_matematyki(spoiler_nie_zdalem_XD)/: Wstep_do_matematyki-liczby_pierwsze.cpp
fizyka_lab/: E3.2-protokół_pomiarowy.docx  E3.2-sprawozdanie.docx  E5.1-sprawozdanie.docx  MC 9.1.-sprawozdanie.docx  O3.2-protokół_pomiarowy.docx  O3.2-sprawozdanie.docx  obliczenia.xlsx  wzór-protokół_pomiarowy.docx
matematyka_dyskretna/RNS/: RNS(system_resztowy)updated.cpp
matematyka_dyskretna_cpp/RNS/: RNS(system_resztowy).cpp  Wnioski.txt
obiektowy_cpp/kol2/: assets.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
obiektowy_cpp/zaj1/: zaj1.cpp
obiektowy_cpp/zaj2/: zaj2.cbp  zaj2.depend  zaj2.layout
obiektowy_cpp/zaj3/: zaj3.layout
obiektowy_cpp/zaj8/zaj8/: CMakeLists.txt  main.cpp  tkolo.cpp  tkolo.h  tpunkt.cpp  tpunkt.h
podstawy_algorytmiki_cpp/zaj2/: zaj2.cpp
podstawy_algorytmiki_cpp/zaj3/: studenci.csv  zaj3.cpp
podstawy_algorytmiki_cpp/zaj4/: zaj4.cpp
podstawy_elektrotechniki_i_elektroniki/: wzór-protokół_pomiarowy.odt
programowanie_strukturalne/zaj1/: czy_dostane_5_-_proste.c
programowanie_strukturalne/zaj11/: TabliceDyn.h
programowanie_strukturalne/zaj13/: zaj13.c
programowanie_strukturalne/zaj14/: Untitled3.c
programowanie_strukturalne/zaj7/: zaj7.c
programowanie_strukturalne_c/: README.md
wstęp_do_matematyki/: Ciągi liczb pierwszych większych od 100.txt
(+1001 files in other folders)
